# rules_foreign_cc

./: .gitignore  BUILD.bazel  Dockerfile.linux  NOTES  README.md  WORKSPACE.bazel  docker.sh  notes
.bazelci/: config.yaml
examples/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
examples/cmake_hello_world_lib/binary/: BUILD.bazel
examples/cmake_hello_world_lib/binary/src/: CMakeLists.txt
examples/cmake_hello_world_lib/shared/: BUILD.bazel  hello_client.c  jack.bzl  libhello.lib
examples/cmake_hello_world_lib/static/: BUILD.bazel  CMakeLists.txt
examples/cmake_with_bazel_transitive/: BUILD.bazel
examples/current_toolchains/: BUILD.bazel
examples/manual/: .gitignore  build-gettext.sh  build-glib.bat  build-glib.sh
examples/toolchain_make_variables/: BUILD.bazel
foreign_cc/: BUILD.meson  cmake.bzl  configure.bzl  defs.bzl  make.bzl  meson copy.bzl  meson.bzl  ninja.bzl  repositories.bzl  utils.bzl
foreign_cc/built_tools/: BUILD.bazel  meson_build.bzl  ninja_build.bzl  pkgconfig_build.bzl  pkgconfig_wrapper.sh
foreign_cc/built_tools/private/: built_tools_framework.bzl
foreign_cc/private/: BUILD.meson.bazel  configure_script.bzl  framework.bzl  runnable_bin_wrapper.sh  runnable_binary_wrapper.sh  transitions.bzl
foreign_cc/private/framework/: helpers.bzl
foreign_cc/private/framework/toolchains/: access.bzl  freebsd_commands.bzl  linux_commands.bzl  macos_commands.bzl  windows_commands.bzl
toolchains/: BUILD.bazel  built_toolchains.bzl  prebuilt_toolchains.bzl  prebuilt_toolchains.py  prebuilt_toolchains_repository.bzl  toolchains.bzl
toolchains/native_tools/: native_tools_toolchain.bzl  tool_access.bzl
