load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "jacks_rule")



# "@bazel_tools//tools:bzl_srcs" is a filegroup. Convert define a `bzl_library` for it
bzl_library(
    name = "bazel_tools_bzl_srcs",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)

bzl_library(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]) + [
        "@bazel_tools//tools:bzl_srcs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_tools_bzl_srcs",
        "//foreign_cc:bzl_srcs",
        "//toolchains:bzl_srcs",
    ],
)



