load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "libhello_import",
    hdrs = ["hello.h"],
    interface_library = "libhello.lib",
    shared_library = "libhello.dll",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "blob",
    hdrs = ["hello.h"],
    visibility = ["//visibility:public"],
    deps = ["libhello_import"],
)
